[gd_scene load_steps=5 format=3 uid="uid://4unqvd6msldj"]

[ext_resource type="PackedScene" uid="uid://bcl3djprybc88" path="res://Player/player.tscn" id="1_jmx30"]
[ext_resource type="Script" path="res://Level/level.gd" id="1_uev42"]
[ext_resource type="Texture2D" uid="uid://bn7i2ni1olcjy" path="res://Level/background.png" id="3_so0fa"]

[sub_resource type="Curve2D" id="Curve2D_uyogg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -100, -100, 0, 0, 0, 0, 1380, -100, 0, 0, 0, 0, 1380, 820, 0, 0, 0, 0, -100, 820, 0, 0, 0, 0, -100, -100)
}
point_count = 5

[node name="Level" type="Node2D"]
script = ExtResource("1_uev42")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_so0fa")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("1_jmx30")]
position = Vector2(960, 540)

[node name="AsteroidSpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_uyogg")

[node name="SpawnPoint" type="PathFollow2D" parent="AsteroidSpawnPath"]
position = Vector2(-100, -100)

[node name="AsteroidSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="shot" from="Player" to="." method="_on_player_shot"]
[connection signal="timeout" from="AsteroidSpawnTimer" to="." method="_on_asteroid_spawn_timer_timeout"]
